# gaming-audio

./: .env.example  .gitignore  README.md  docker-compose.yml
docs/: AI_Game_Audio_FSD_v0.1.md  AI_Game_Audio_MVP_v0.1.md  AI_Game_Audio_PRD_v0.1.md  architecture.md  execution-plan.md  post-pull-review-and-local-validation-2026-04-02.md  sprint1-review-and-local-deployment-2026-04-02.md
server/: alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0ee61d902617_initial_schema_with_14_tables.py  42a5ce1e63f6_add_mapping_dictionaries_table.py  8f55a7fd4afe_fix_wwise_template_add_created_at_and_.py
server/app/: config.py  database.py  main.py  seed.py
server/app/core/: deps.py  models.py  schemas.py  state_machine.py  storage.py
server/app/modules/audio_pipeline/: generator.py  processor.py  prompt.py  qc_service.py  router.py  service.py
server/app/modules/audit/: router.py  service.py
server/app/modules/intent/: router.py  service.py
server/app/modules/rule/: engine.py  naming.py  router.py  service.py
server/app/modules/task/: router.py  service.py  sse.py  upload.py
server/app/modules/wwise/: connection.py  router.py  service.py
server/app/worker/: celery_app.py
server/tests/: conftest.py  test_audio_pipeline.py  test_audit.py  test_celery.py  test_conflict.py  test_intent.py  test_mapping.py  test_naming.py  test_prompt.py  test_qc.py  test_rule_crud.py  test_rule_engine.py  test_state_machine.py  test_storage.py  test_task_crud.py  test_upload.py  test_wwise.py
web/: package.json  pnpm-lock.yaml
web/src/lib/: api.ts  (+4 more)
(+26 files in other folders)
